add two other recipes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   
   <body>
     <h1>Recipes</h1>
-    <a href="recipes/Kitsune-Udon.html">Kitsune Udon</a>
+    <img src="img/easy-pantry-meals-japanese-recipes.jpg">
+    <h2>Check the following "OISHII" dishes!</h2>
+    <ul>
+      <li><a href="recipes/Kitsune-Udon.html">Kitsune Udon</a></li>
+      <li><a href="recipes/Yaki-Onigiri.html">Yaki Onigiri</a></li>
+      <li><a href="recipes/Vegan-Miso-Soup.html">Vegan Miso Soup</a></li>
+    </ul>
+    <p>More dishes please refer to <a href="https://www.justonecookbook.com/easy-pantry-recipes/#Udon%20Noodles">here</a>. Enjoy!</p>      
   </body>
 
 </html>
