--- a/recipes/Kitsune-Udon.html
+++ b/recipes/Kitsune-Udon.html
@@ -15,18 +15,33 @@
       
     <h2>Ingredients</h2>
       <ul>
-        <li>Dashi Broth</li>
-        <li>Udon Noodles</li>
-        <li>Packaged vs. Homemade Aburaage</li>
+        <li>2 ¼ cups dashi</li>
+        <li>1 Tbsp mirin</li>
+        <li>1 tsp sugar</li>
+        <li>1 Tbsp usukuchi (light-colored) soy sauce</li>
+        <li>½ tsp kosher/sea salt</li>
+        <li>2 servings udon noodles</li>
+        <li>4 inari age (seasoned fried tofu pouch)</li>
+        <li>1 green onion/scallion</li>
+        <li>4 slices narutomaki (fish cakes)</li>
+        <li>Shichimi Togarashi</li>
+        <li>2 ½ cups water</li>
+        <li>1 kombu (dried kelp)</li>
+        <li>1 ½ cups katsuobushi</li>
       </ul>
       
     <h2>Steps</h2>
       <ol>
         <li>Gather all the ingredients. Before we start: It's really important to have good flavorful dashi for this recipe. Although you can take the shortcut by using dashi powder or dashi packet, I encourage you to make your own dashi because the broth tastes so much better! It only takes less than 30 minutes to make. For vegetarian/vegan, please use Kombu Dashi.</li>
-        <h3>To Make Homemade Dashi (Please skip if you already have dashi)</h3>
+      </ol>
+      <h3>To Make Homemade Dashi (Please skip if you already have dashi)</h3>
+      <ol>
         <li>Put the kombu and 2 ½ cup water in a measuring cup for at least 30 minutes. If you have time, soak for 3 hours or up to half a day. Kombu’s flavor comes out naturally from soaking in water. If you don’t have time at all, skip soaking.</li>
         <li>Transfer kombu and water to a saucepan. Slowly bring to a boil over medium-low heat.</li>
+        <li>Just before boiling (you will see bubbles around the edges of the pan), remove the kombu. If you leave the kombu inside, the dashi will become slimy and bitter. Now this broth is <strong>Kombu Dashi (vegetarian/vegan)</strong> and it's ready to make udon soup. For non-vegetarian/vegan, add 1 ½ cups katsuobushi and bring it to a boil again.</li>
+        <li>Once the dashi is boiling, reduce the heat, simmer for just 15 seconds, and turn off the heat. Let the katsuobushi sink to the bottom, about 10-15 minutes. Strain the dashi through a fine-mesh sieve set over a saucepan. Now you have roughly 2 ¼ cup dashi.</li>
       </ol>
+      <p>The rest of setps please refer to <a href="https://www.justonecookbook.com/kitsune-udon/">here</a>.</p>
   </body>
 
 
